# MM

./: CMakeLists.txt  CONTRIBUTING.md  README.md  cfs-mm-app-OSS-readme.txt  mission_build.cmake  mm_doxygen_config.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-documentation.yml  codeql-build.yml
docs/: CFS MM 2410 Version Description Document.docx  CFS_MM_Design.ppt  MM_DevelopersGuide.docx  MM_RequirementsToDesignTrace.docx  MemoryManagement_tutorial2021_Rev07.pptx  mm-detaildesign.doxyfile.in  mm_FunctionalRequirements.csv
docs/dox_src/: CMakeLists.txt  cfs_mm.dox  mm-common.doxyfile.in  mm-usersguide.doxyfile.in
fsw/inc/: mm_events.h  mm_mission_cfg.h  mm_msg.h  mm_msgdefs.h  mm_platform_cfg.h
fsw/mission_inc/: mm_mission_cfg.h  mm_perfids.h
fsw/platform_inc/: mm_msgids.h  mm_platform_cfg.h
fsw/src/: mm_app.c  mm_app.h  mm_dump.c  mm_dump.h  mm_events.h  mm_filedefs.h  mm_load.c  mm_load.h  mm_mem16.c  mm_mem16.h  mm_mem32.c  mm_mem32.h  mm_mem8.c  mm_mem8.h  mm_msg.h  mm_msgdefs.h  mm_utils.c  mm_utils.h  mm_verify.h  mm_version.h
test_and_ground/Results/: MM_V2_4_1_0_TestReport.docx  RTTM.htm  TestExecutionSummary.htm
unit-test/: CMakeLists.txt  README.txt  mm_app_tests.c  mm_dump_tests.c  mm_load_tests.c  mm_mem16_tests.c  mm_mem32_tests.c  mm_mem8_tests.c  mm_utils_tests.c
unit-test/stubs/: mm_app_stubs.c  mm_dump_stubs.c  mm_load_stubs.c  mm_mem16_stubs.c  mm_mem32_stubs.c  mm_mem8_stubs.c  mm_utils_stubs.c
unit-test/utilities/: mm_test_utils.c  mm_test_utils.h
(+123 files in other folders)
